tests/typing/fail/array/create_arg_inconsistent_array.act
contract A

constructor(uint[3] u)


contract B

constructor()

creates
  A a := new A([1,2,false])
